# mmdeploy-summer-camp

./: README.md
week1/: README.md  week1.md
week1/Quantize-squeezenet/: imagelist.txt  run.sh  squeezenet_v1.1-int8.param  squeezenet_v1.1.table
week1/Quantize-squeezenet/int8/: squeezenet_v1.1.param
week1/Quantize-squeezenet/opt/: squeezenet_v1.1-opt.param
week1/conv2d/: README.md  conv2d.py  eval.py
week1/ncnn-mat/: CMakeLists.txt  README.md  ncnn-cube-test.cpp  ncnn-matrix-test.cpp  ncnn-vector-test.cpp
week2/: README.md  paper1.md  paper2.md
week3/: README.md  convert.sh  out.pkl  test.sh
week3/resnet18_ncnn_int8/: deploy.json  detail.json  end2end.param  end2end.table  end2end_int8.param  pipeline.json
week4/: README.md  hourglass.md  result.md
week4/cxx/: CMakeLists.txt
week4/hourglass52_coco_256x256/: hourglass52_coco_256x256.py
week4/hourglass52_coco_256x256/mmpose-hourglass/: README.md  testDataset.sh
week4/hourglass52_coco_256x256/ncnn-hourglass/: REDME.md  deploy.sh  test.sh  test_ncnn.sh  test_ncnn_int8.sh  test_ort.sh
week4/hourglass52_coco_256x256/onnx-hourglass/: eval_on_onnxruntime.sh  hourglass2onnx.py  torch2onnx.sh
week4/hourglass52_coco_256x256/openvino-hourglass/: deploy.sh  test.sh
week4/hourglass52_coco_256x256/regression_test_wkdir/: mmdeploy_regression_test_0.8.0.xlsx  mmpose_report.txt  mmpose_report.xlsx
week4/hourglass52_coco_256x256/torch-hourglass/: test_torch.sh
week4/hourglass52_coco_256x256/trt-hourglass/: deploy.sh  deploy_fp16.sh  test_trt.sh  (+3 more)
week4/hourglass52_coco_384x384/: hourglass52_coco_384x384.py
(+10 files in other folders)
